--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
     "name": "RepositorioNodeRed",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-contrib-moment": "5.0.0",
+        "node-red-contrib-ui-digital-display": "1.0.3",
+        "node-red-contrib-ui-led": "0.4.11",
+        "node-red-dashboard": "3.6.2",
+        "node-red-node-mysql": "2.0.0",
+        "node-red-node-ui-table": "0.4.3"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows.json",
